// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenTime should match snapshot 1`] = `
<div
  className="css-1yoh2yd"
  layer="1"
  position="relative"
>
  <h4
    className="css-1khq1ir"
    color="mischka"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="relative"
  >
    Screen Time 
    <sup
      className="css-xonfx3"
      color="color"
    >
      BETA
    </sup>
    <div
      className="css-0"
      position="relative"
    >
      <div
        className="css-1cncp8y"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1bxc77d"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-12ece8u"
            position="absolute"
          />
          <div
            className="css-4obz46"
            position="relative"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <svg
    className="css-0"
    height="275px"
    style={
      Object {
        "height": 275,
        "width": 600,
      }
    }
    width="600px"
  >
    <g
      className="css-0"
      transform="rotate(-89, 300, 137.5)"
    >
      <path
        className="css-e5mitn"
        d="M 400 137.5 A 100 100 0 0 1 254.78696143925166 226.69518565541688"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-e5mitn"
        d="M 231.95291274890502 210.77751303532256 A 100 100 0 0 1 243.56355381395008 54.947425588967306"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-e5mitn"
        d="M 268.50437935300914 42.58937951914527 A 100 100 0 0 1 383.37096071317376 82.27968752567193"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-e5mitn"
        d="M 395.36209200496467 107.39897994358567 A 100 100 0 0 1 396.1261695938319 109.93626441830011"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
    </g>
    <text
      alignmentBaseline="baseline"
      className="css-4g6ai3"
      fill="mischka"
      onClick={[Function]}
      textAnchor="start"
      x={403.3319028289867}
      y={76.48755981161841}
    >
      www.bar.com
    </text>
    <text
      alignmentBaseline="hanging"
      className="css-4g6ai3"
      fill="mischka"
      onClick={[Function]}
      textAnchor="end"
      x={288.99657269198025}
      y={256.9944542122233}
    >
      foo.com
    </text>
    <text
      alignmentBaseline="baseline"
      className="css-4g6ai3"
      fill="mischka"
      onClick={[Function]}
      textAnchor="end"
      x={187.2811990722431}
      y={96.3360361795817}
    >
      web.baz.com
    </text>
    <text
      alignmentBaseline="baseline"
      className="css-4g6ai3"
      fill="mischka"
      onClick={[Function]}
      textAnchor="end"
      x={267.4087140979822}
      y={22.01057155196871}
    >
      other
    </text>
  </svg>
  <button
    backgroundColor="outerSpace"
    className="css-15foh21"
    color="mischka"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    outlineColor="saltBox"
    position="relative"
  >
    Enable
    <div
      className="css-0"
      position="relative"
    >
      <div
        className="css-1cncp8y"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1bxc77d"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-12ece8u"
            position="absolute"
          />
          <div
            className="css-4obz46"
            position="relative"
          >
            <span
              className="css-0"
            >
              Screen time will need to ask for some elevated permissions to track viewing times.
            </span>
          </div>
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ScreenTime should match snapshot with a grouped selected segment 1`] = `
<div
  className="css-1yoh2yd"
  layer="1"
  position="relative"
>
  <h4
    className="css-1khq1ir"
    color="mischka"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="relative"
  >
    Screen Time 
    <sup
      className="css-xonfx3"
      color="color"
    >
      BETA
    </sup>
    <div
      className="css-0"
      position="relative"
    >
      <div
        className="css-1cncp8y"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1bxc77d"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-12ece8u"
            position="absolute"
          />
          <div
            className="css-4obz46"
            position="relative"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <div
    className="css-0"
  >
    <svg
      className="css-0"
      height="250"
      width="600"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="css-0"
        d="M19 125.5h566"
        stroke="outerSpace"
        strokeLinecap="round"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="235.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="102.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="521.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="33.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="64.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="26.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="364.5"
        cy="39.5"
        fill="outerSpace"
        fillRule="nonzero"
        r="26.5"
      />
      <circle
        className="css-0"
        cx="456"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
      <circle
        className="css-0"
        cx="419"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
    </svg>
    <p
      className="css-1hhdzfd"
      color="color"
    >
      Explore more, there is not enough data to show you anything yet.
    </p>
  </div>
  <button
    backgroundColor="outerSpace"
    className="css-15foh21"
    color="mischka"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    outlineColor="saltBox"
    position="relative"
  >
    Enable
    <div
      className="css-0"
      position="relative"
    >
      <div
        className="css-1cncp8y"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1bxc77d"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-12ece8u"
            position="absolute"
          />
          <div
            className="css-4obz46"
            position="relative"
          >
            <span
              className="css-0"
            >
              Screen time will need to ask for some elevated permissions to track viewing times.
            </span>
          </div>
        </span>
      </div>
    </div>
  </button>
  <div
    className="css-1w4ofee"
    data-mujo={true}
    isOpen={true}
    onRequestClose={[Function]}
    outlineColor="saltBox"
    overlayClassName="mujo-modal css-qcfpiy"
    shouldCloseOnOverlayClick={true}
  >
    <svg
      className="css-1mv301s"
      height={20}
      onClick={[Function]}
      position="absolute"
      width={19}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="css-0"
        d="
        M9.778 6.864
        l5.754-6.1
        a2 2 0 1 1 2.91 2.746
        l-5.914 6.268 5.913 6.269
        a2 2 0 1 1-2.91 2.744
        l-5.753-6.098-5.753 6.098
        a2 2 0 1 1-2.91-2.744
        l5.914-6.269L1.115 3.51
        A2 2 0 1 1 4.025.765l5.753 6.099z
        "
        fill="mischka"
        fillRule="nonzero"
      />
    </svg>
    <div
      className="css-yzx775"
    >
      <h4
        className="css-30v94s"
        color="mischka"
      >
        Screen Time for:
      </h4>
    </div>
    <div
      className="css-k0sogd"
      overflow="scroll"
    >
      <div
        className="css-187idct"
      >
        <h2
          className="css-1f6bnk1"
          color="white"
          onClick={[Function]}
          overflow="hidden"
          textOverflow="ellipsis"
        >
          foo.com
        </h2>
      </div>
      <div
        className="css-187idct"
      >
        <h2
          className="css-1f6bnk1"
          color="white"
          onClick={[Function]}
          overflow="hidden"
          textOverflow="ellipsis"
        >
          main.bar.com
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenTime should match snapshot with a selected segment 1`] = `
<div
  className="css-1yoh2yd"
  layer="1"
  position="relative"
>
  <h4
    className="css-1khq1ir"
    color="mischka"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="relative"
  >
    Screen Time 
    <sup
      className="css-xonfx3"
      color="color"
    >
      BETA
    </sup>
    <div
      className="css-0"
      position="relative"
    >
      <div
        className="css-1cncp8y"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1bxc77d"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-12ece8u"
            position="absolute"
          />
          <div
            className="css-4obz46"
            position="relative"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <div
    className="css-0"
  >
    <svg
      className="css-0"
      height="250"
      width="600"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="css-0"
        d="M19 125.5h566"
        stroke="outerSpace"
        strokeLinecap="round"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="235.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="102.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="521.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="33.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="64.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="26.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className="css-0"
        cx="364.5"
        cy="39.5"
        fill="outerSpace"
        fillRule="nonzero"
        r="26.5"
      />
      <circle
        className="css-0"
        cx="456"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
      <circle
        className="css-0"
        cx="419"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
    </svg>
    <p
      className="css-1hhdzfd"
      color="color"
    >
      Explore more, there is not enough data to show you anything yet.
    </p>
  </div>
  <button
    backgroundColor="outerSpace"
    className="css-15foh21"
    color="mischka"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    outlineColor="saltBox"
    position="relative"
  >
    Enable
    <div
      className="css-0"
      position="relative"
    >
      <div
        className="css-1cncp8y"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1bxc77d"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-12ece8u"
            position="absolute"
          />
          <div
            className="css-4obz46"
            position="relative"
          >
            <span
              className="css-0"
            >
              Screen time will need to ask for some elevated permissions to track viewing times.
            </span>
          </div>
        </span>
      </div>
    </div>
  </button>
  <div
    className="css-1w4ofee"
    data-mujo={true}
    isOpen={true}
    onRequestClose={[Function]}
    outlineColor="saltBox"
    overlayClassName="mujo-modal css-qcfpiy"
    shouldCloseOnOverlayClick={true}
  >
    <svg
      className="css-1mv301s"
      height={20}
      onClick={[Function]}
      position="absolute"
      width={19}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="css-0"
        d="
        M9.778 6.864
        l5.754-6.1
        a2 2 0 1 1 2.91 2.746
        l-5.914 6.268 5.913 6.269
        a2 2 0 1 1-2.91 2.744
        l-5.753-6.098-5.753 6.098
        a2 2 0 1 1-2.91-2.744
        l5.914-6.269L1.115 3.51
        A2 2 0 1 1 4.025.765l5.753 6.099z
        "
        fill="mischka"
        fillRule="nonzero"
      />
    </svg>
    <div
      className="css-yzx775"
    >
      <h4
        className="css-30v94s"
        color="mischka"
      >
        Screen Time for:
      </h4>
    </div>
    <div
      className="css-k0sogd"
      overflow="scroll"
    >
      <div
        className="css-dalpef"
        overflow="scroll"
      >
        <h2
          className="css-132p4b7"
          color="mischka"
        >
          foo.com
        </h2>
        <progress
          className="css-mlu9c0"
          max="100"
          value={67}
        >
          67
          %
        </progress>
        <p
          className="css-1p1wrjs"
          color="color"
        >
          The site 
          foo.com
           was actively viewed for
           
          <span
            className="css-0"
            color="mischka"
          >
            6 seconds
          </span>
           
          since your last break. That is 
          67
          % of your web viewing.
        </p>
        <p
          className="css-tmwlom"
          color="color"
        >
          These times are not aways going to represent a 100% view of your viewing habits.
        </p>
      </div>
      <div
        backgroundColor="gravel"
        className="css-1yqdfgl"
      >
        <div
          className="css-i3jcei"
        >
          <div
            className="css-j7qwjs"
          >
            <div
              className="css-102g4jn"
            >
              <input
                className="css-1ay9vb9"
                id="break-timer"
                onChange={[Function]}
                type="checkbox"
              />
              <h4
                className="css-30v94s"
                color="color"
                labelFor="break-timer"
              >
                Break Timer
              </h4>
            </div>
          </div>
        </div>
        <div
          className="css-wjp2bi"
        >
          <a
            backgroundColor="saltBox"
            className="css-1akodnm"
            color="white"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            outlineColor="gravel"
            position="relative"
          >
            Visit site
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
